all classes done | need equals, toString, hashCode