@@ -1,18 +1,25 @@
 package s367945.lab2.abc;
 
-import java.util.Set;
+import java.util.HashSet;
+import java.util.Arrays;
 
 import s367945.lab2.enums.Property;
+import s367945.lab2.interfaces.Hugable;
 
-public abstract class BodyPart extends PropertiesContained {
-    protected final Set<Property> properties;
+public abstract class BodyPart extends PropertiesContained implements Hugable {
+    protected final HashSet<Property> properties;
     
     public BodyPart(Property... properties) {
-        this.properties = Set.of(properties);
+        this.properties = new HashSet<Property>(Arrays.asList(properties));
     }
     
     @Override
-    public Set<Property> getProperties() {
+    public HashSet<Property> getProperties() {
         return this.properties;
+    }
+
+    @Override
+    public void onHug(Creature actor) {
+        // Do nothing cause it's a body part and if you want specific action try to hug body or it`s owner
     }
 }
