@@ -1,21 +1,22 @@
 package s367945.lab2.classes;
 
-import java.util.Set;
+import java.util.HashSet;
+import java.util.Arrays;
 
 import s367945.lab2.abc.PropertiesContained;
 import s367945.lab2.enums.Property;
 
 public class ShipSails extends PropertiesContained {
-    protected Set<Property> properties = Set.of();
+    protected HashSet<Property> properties = new HashSet<Property>();
     
     public ShipSails(Property... properties) {
         super();
-        this.properties.addAll(Set.of(properties));
+        this.properties.addAll(new HashSet<Property>(Arrays.asList(properties)));
 
     }
     
     @Override
-    public Set<Property> getProperties() {
+    public HashSet<Property> getProperties() {
         return this.properties;
     }
 }
