@@ -1,6 +1,7 @@
 package s367945.lab2.classes;
 
-import java.util.Set;
+import java.util.HashSet;
+import java.util.Arrays;
 
 import s367945.lab2.abc.PropertiesContained;
 import s367945.lab2.enums.Property;
@@ -8,15 +9,15 @@ import s367945.lab2.interfaces.Positioned;
 
 public class Sight extends PropertiesContained {
     public final Positioned target;
-    protected Set<Property> properties;
+    protected HashSet<Property> properties;
 
     public Sight(Positioned target, Property... properties) {
         this.target = target;
-        this.properties = Set.of(properties);
+        this.properties = new HashSet<Property>(Arrays.asList(properties));
     }
 
     @Override
-    public Set<Property> getProperties() {
+    public HashSet<Property> getProperties() {
         return this.properties;
     }
 }
